:construction: all page

--- a/goal/goal.html
+++ b/goal/goal.html
@@ -61,78 +61,80 @@
     </header>
 </div>
 <!-- wrapper end -->
-<div class="cover">
-    <h1>
-        <span>G</span>
-        <span>o</span>
-        <span>a</span>
-        <span>l</span>
-    </h1>
-    <div class="container">
-        <div class="mentoring img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-user-group"></i>
+<div class="main-container">
+    <div class="cover">
+        <h1>
+            <span>G</span>
+            <span>o</span>
+            <span>a</span>
+            <span>l</span>
+        </h1>
+        <div class="container">
+            <div class="mentoring img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-user-group"></i>
+                </div>
+                <div class="text">
+                    <p class="title">1:1 Mentoring</p>
+                    <p class="desc">선배가 후배에게 1대 1 멘토링 </p>
+                </div>
             </div>
-            <div class="text">
-                <p class="title">1:1 Mentoring</p>
-                <p class="desc">선배가 후배에게 1대 1 멘토링 </p>
+            <!--  mentoring end1 -->
+            <div class="seminar img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-chalkboard-user"></i>
+                </div>
+                <div class="text">
+                    <p class="title">Front Seminar</p>
+                    <p class="desc">HTML, CSS, JS 그리고 React까지</p>
+                </div>
             </div>
-        </div>
-        <!--  mentoring end1 -->
-        <div class="seminar img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-chalkboard-user"></i>
-            </div>
-            <div class="text">
-                <p class="title">Front Seminar</p>
-                <p class="desc">HTML, CSS, JS 그리고 React까지</p>
-            </div>
-        </div>
-        <!-- seminar end2 -->
-        <div class="backend img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-server"></i>
-            </div>
-            <div class="text">
+            <!-- seminar end2 -->
+            <div class="backend img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-server"></i>
+                </div>
+                <div class="text">
 
-                <p class="title">Add Backend Study</p>
-                <p class="desc">Python 뿐만 아니라 Java, Node.js까지</p>
+                    <p class="title">Add Backend Study</p>
+                    <p class="desc">Python 뿐만 아니라 Java, Node.js까지</p>
+                </div>
             </div>
+            <!-- backend end3 -->
         </div>
-        <!-- backend end3 -->
-    </div>
-    <!-- container1 end -->
-    <div class="container">
-        <div class="team img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-people-group"></i>
+        <!-- container1 end -->
+        <div class="container">
+            <div class="team img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-people-group"></i>
+                </div>
+                <div class="text">
+                    <p class="title">Team Project</p>
+                    <p class="desc">2, 3학년이 한 팀이 되어<br /> 개인이 아닌 팀 프로젝트 진행</p>
+                </div>
             </div>
-            <div class="text">
-                <p class="title">Team Project</p>
-                <p class="desc">2, 3학년이 한 팀이 되어<br /> 개인이 아닌 팀 프로젝트 진행</p>
+            <!-- team end4 -->
+            <div class="session img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-microphone-lines"></i>
+                </div>
+                <div class="text">
+                    <p class="title">Session</p>
+                    <p class="desc">기술 면접을 위한 Keyword 공부</p>
+                </div>
             </div>
+            <!-- session end5 -->
+            <div class="study img-list">
+                <div class="goal-img">
+                    <i class="fa-solid fa-computer"></i>
+                </div>
+                <div class="text">
+                    <p class="title">CS Study</p>
+                    <p class="desc">알고리즘, 자료구조 책으로 기술 블로그 정리</p>
+                </div>
+            </div>
+            <!-- study end6 -->
         </div>
-        <!-- team end4 -->
-        <div class="session img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-microphone-lines"></i>
-            </div>
-            <div class="text">
-                <p class="title">Session</p>
-                <p class="desc">기술 면접을 위한 Keyword 공부</p>
-            </div>
-        </div>
-        <!-- session end5 -->
-        <div class="study img-list">
-            <div class="goal-img">
-                <i class="fa-solid fa-computer"></i>
-            </div>
-            <div class="text">
-                <p class="title">CS Study</p>
-                <p class="desc">알고리즘, 자료구조 책으로 기술 블로그 정리</p>
-            </div>
-        </div>
-        <!-- study end6 -->
     </div>
     </body>
 
