--- a/information/information.html
+++ b/information/information.html
@@ -58,6 +58,8 @@
         </ul>
       </div>
     </header>
+  </div>
+  <div class="container">
     <div class="top">
       <p class="title">IFP</p>
       <p class="desc">저희 IFP는 Information Forward Page의 줄임말로 정보 보안 목적으로 개설된 동아리였습니다.
