--- a/notice/notice.html
+++ b/notice/notice.html
@@ -57,10 +57,12 @@
             </div>
         </header>
     </div>
-    <div class="cover">
-        <div class="content">
-            <div class="notebook-page"> <textarea id="msg"></textarea>
-                <div class="text-edit">To 여러분들에게<br /><br />진로를 정하지 못한 사람<br />웹에 관심이 있는 사람<br />다른 사람들과 어울리며 공부하고 싶은 사람<br />선배 그리고 동기들과 친해지고 싶은 사람<br /><br />ifp에 지원해주세요.<br /><br /><br /><br />From IFP</div>
+    <div class="main-container">
+        <div class="cover">
+            <div class="content">
+                <div class="notebook-page"> <textarea id="msg"></textarea>
+                    <div class="text-edit">To. 여러분들에게<br /><br />진로를 정하지 못한 사람<br />웹에 관심이 있는 사람<br />다른 사람들과 어울리며 공부하고 싶은 사람<br />선배 그리고 동기들과 친해지고 싶은 사람<br /><br />ifp에 지원해주세요.<br /><br /><br /><br />From. IFP</div>
+                </div>
             </div>
         </div>
         <div class="button">
