--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IFP</title>
-  <link rel="stylesheet" href="./main-media.css">
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./main-media.css">
   <!-- favicon start  -->
   <link rel="apple-touch-icon" sizes="57x57" href="./image/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="./image/favicon/apple-icon-60x60.png" />
@@ -33,7 +33,7 @@
   <meta property="og:image" content="./image/logo.png">
   <meta property="og:description" content="Hello World">
   <!-- 미리보기 끝 -->
-  <link rel="stylesheet" href="">
+  <!-- <link rel="stylesheet" href=""> -->
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,50 +45,54 @@
   </script>
   <link rel="stylesheet" href="./main.css">
 </head>
-<div class="wrapper">
-  <header>
-    <div class="logo">
-      <a href="./index.html">
-        <img src="./image/logo.png" alt="" />
-      </a>
-    </div>
-    <div class="menu">
-      <ul>
-        <a href="./information/information.html">
-          <li>Info</li>
-        </a>
-        <a href="./active/active.html">
-          <li>Active</li>
-        </a>
-        <a href="./goal/goal.html">
-          <li>Goal</li>
-        </a>
-        <a href="./notice/notice.html">
-          <li>Notice</li>
-        </a>
-      </ul>
-    </div>
-  </header>
-</div>
 
-<section id="mast" class="mast animate">
-  <div class="mast__header">
-    <span class="mast__icon">🌈</span>
-    <h1 class="mast__title js-letters text-animate">
-      Hello World!</h1>
-    <p class="mast__text js-letters">
-      Welcome to the IFP website
-    </p>
+<body>
+  <div class="wrapper">
+    <header>
+      <div class="logo">
+        <a href="../index.html">
+          <img src="../image/logo.png" alt="" />
+        </a>
+      </div>
+      <div class="menu">
+        <ul>
+          <a href="../information/information.html">
+            <li>Info</li>
+          </a>
+          <a href="../active/active.html">
+            <li>Active</li>
+          </a>
+          <a href="../goal/goal.html">
+            <li>Goal</li>
+          </a>
+          <a href="../notice/notice.html">
+            <li>Notice</li>
+          </a>
+        </ul>
+      </div>
+    </header>
   </div>
-</section>
-<a class="hidden" href="https://hits.seeyoufarm.com">
-  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fifp-2022-information-page.vercel.app&count_bg=%23000000&title_bg=%23000000&icon=&icon_color=%23E7E7E7&title=IFP&edge_flat=false" />
-</a>
-<button class="btn"><i class="ion-refresh"></i></button>
+  <!-- wrapper end, section start -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="./index.js"></script>
-<!-- main end -->
+  <section id="mast" class="mast animate">
+    <div class="mast__header">
+      <span class="mast__icon">🌈</span>
+      <h1 class="mast__title js-letters text-animate">
+        Hello World!</h1>
+      <p class="mast__text js-letters">
+        Welcome to the IFP website
+      </p>
+    </div>
+  </section>
+  <a class="hidden" href="https://hits.seeyoufarm.com">
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fifp-2022-information-page.vercel.app&count_bg=%23000000&title_bg=%23000000&icon=&icon_color=%23E7E7E7&title=IFP&edge_flat=false" />
+  </a>
+  <button class="btn"><i class="ion-refresh"></i></button>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="./index.js"></script>
+  <!-- main end -->
+  </div>
 </body>
 
 </html>
