:construction: all page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous">
   </script>
   <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./media.css">
 </head>
 
 <body>
@@ -73,25 +74,21 @@
     </header>
   </div>
   <!-- wrapper end, section start -->
-
-  <section id="mast" class="mast animate">
-    <div class="mast__header">
-      <span class="mast__icon">🌈</span>
-      <h1 class="mast__title js-letters text-animate">
-        Hello World!</h1>
-      <p class="mast__text js-letters">
-        Welcome to the IFP website
-      </p>
-    </div>
-  </section>
-  <a class="hidden" href="https://hits.seeyoufarm.com">
-    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fifp-2022-information-page.vercel.app&count_bg=%23000000&title_bg=%23000000&icon=&icon_color=%23E7E7E7&title=IFP&edge_flat=false" />
-  </a>
-  <button class="btn"><i class="ion-refresh"></i></button>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script src="./index.js"></script>
-  <!-- main end -->
+  <div class="main-container">
+    <section id="mast" class="mast animate">
+      <div class="mast__header">
+        <span class="mast__icon">🌈</span>
+        <h1 class="mast__title js-letters text-animate">
+          Hello World!</h1>
+        <p class="mast__text js-letters">
+          Welcome to the IFP website
+        </p>
+      </div>
+    </section>
+    <button class="btn"><i class="ion-refresh"></i></button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="./index.js"></script>
+    <!-- main end -->
   </div>
 </body>
 
