미리보기 테스트

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>IFP</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./main-media.css">
+  <link rel="stylesheet" href="./title.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
   <!-- favicon start  -->
   <link rel="apple-touch-icon" sizes="57x57" href="./image/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="./image/favicon/apple-icon-60x60.png" />
