--- a/active/active.html
+++ b/active/active.html
@@ -104,7 +104,7 @@
                 <div class="activeImg"><img src="../image/github.png" alt="" /></div>
                 <div class="text">
                     <p class="title">git & github</p>
-                    <p class="desc">실무에서 쓰이는 개발 툴인 git & github를 과제 및 프로젝트에서 사용하여 능숙하게 다룬다</p>
+                    <p class="desc">실무에서 쓰이는 개발 툴인 git & github를 과제 및 프로젝트에서 사용하여 능숙하게 다룹니다</p>
                 </div>
             </div>
             <!-- github end4 -->
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p class="title">1day 1 commit</p>
+                    <p class="title">1day 1commit</p>
                     <p class="desc">도태되지 않고 꾸준히 성장하기 위해 Github Commit 관리를 합니다</p>
                 </div>
             </div>
