--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IFP</title>
   <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="./main-media.css">
-  <link rel="stylesheet" href="./title.css">
+  <!-- <link rel="stylesheet" href="./title.css"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
