--- a/notice/notice.html
+++ b/notice/notice.html
@@ -66,9 +66,9 @@
             </div>
         </div>
         <div class="button">
-            <a href="https://forms.gle/22qfJgvYZCcAVuKK6">
-                <h2>지원하기</h2>
-            </a>
+            <!-- <a href="https://forms.gle/22qfJgvYZCcAVuKK6"> -->
+            <h2>모집마감</h2>
+            <!-- </a> -->
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
